LRDOCS-8812 Refactor Java code name and paths.

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ docs/**/liferay-????.zip/settings.gradle
 docs/**/liferay-????.zip/setup_tutorial.sh
 docs/**/liferay-????.zip/source-formatter-suppressions.xml
 node_modules
+site/update_site.sh
